@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/POE
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/POE/ChangeLog,v 1.83 2009/03/18 07:31:02 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/POE/ChangeLog,v 1.84 2009/04/03 20:42:50 tove Exp $
+
+*POE-1.004 (03 Apr 2009)
+
+  03 Apr 2009; Torsten Veller <tove@gentoo.org> +POE-1.004.ebuild:
+  Version bump
 
   18 Mar 2009; Joseph Jezak <josejx@gentoo.org> POE-1.003-r1.ebuild:
   Marked ppc stable for bug #261750.
